Add validation of the different fields

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,7 +50,7 @@
         cursor: pointer;
       }
       .selected-user {
-        background-color: lightblue;
+        background-color: #aed8e5;
       }
     }
     .hobby-container{
